# dspy-tool-selection

./: .gitignore  AGENTIC_LOOP_IMPROVEMENTS.md  BTR.md  CLAUDE.md  FIX-TOOLS.md  GEMINI-LOOP-FIXES.md  PYDANTIC_PROPOSAL.md  README.md  TOOLS_LIBRARY.md  claude.env  clean_up.md  cloud.env.example  cloud_test.env.example  demo_output.txt  dspy-agent-loop.md  example_explicit_registration.py  future-loop.md  gemini-loop.md  litellm.md  model_comparison.md  openai.env  pyproject.toml  q-thoughts.md  run_cloud_model_comparison.sh  run_demo.sh  run_model_comparison.sh  setup.sh  simplified-agent-loop.md
agentic_loop/: __init__.py  activity_manager.py  agent_loop_demo.py  agent_reasoner.py  manual_agent_loop.py  models.py  proposal.md  response_formatter.py  run_cloud_model_comparison.py  run_model_comparison.py
docs/: DSPy-Simplified.md
integration_tests/: README.md  run_all_tests.py  test_framework.py  test_full_workflow.py  test_real_model_tools.py  test_simple_workflow.py
shared/: __init__.py  models.py  registry.py  tool_set_registry.py
shared_utils/: __init__.py  console.py  llm_factory.py  metrics.py  models.py
tests/: README.md  conftest.py  run_tests.sh  test_all_tools.py  test_base_tool.py  test_ecommerce_tools.py  test_explicit_registration.py  test_integration.py  test_multi_tool_selector.py  test_phase3_manual_agent_loop.py  test_phase4_activity_manager.py  test_phase5_registry_integration.py  test_phase7_response_formatter.py  test_registry.py  test_set_reminder_fix.py  test_tool_arguments.py  test_tool_implementations.py  test_tool_registry.py  (+2 more)
(+54 files in other folders)
